--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,9 +3,11 @@ name: Node.js CI/CD
 on:
   push:
     branches:
+        -main
       - qasim     # CI/CD will trigger on push to the main branch
   pull_request:
     branches:
+        -main
       - qasim      # CI/CD will trigger on pull request to the main branch
 
 jobs:
