Fixed indentation issue in CI/CD pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,12 +3,12 @@ name: Node.js CI/CD
 on:
   push:
     branches:
-        -main
-      - qasim     # CI/CD will trigger on push to the main branch
+      - main      # CI/CD will trigger on push to the main branch
+      - qasim     # CI/CD will trigger on push to the qasim branch
   pull_request:
     branches:
-        -main
-      - qasim      # CI/CD will trigger on pull request to the main branch
+      - main      # CI/CD will trigger on pull request to the main branch
+      - qasim     # CI/CD will trigger on pull request to the qasim branch
 
 jobs:
   build:
